# robot_hw_sim_latency

./: README.md
ariac/: LICENSE  README.md
ariac/ariac_example/: CMakeLists.txt  package.xml
ariac/ariac_example/config/: sample_gear_conf.yaml
ariac/ariac_example/script/: ariac_example_node.py
ariac/ariac_example/src/: ariac_example_node.cpp
ariac/ariac_example/src/ariac_example/: ariac_example.py
ariac/osrf_gear/: CMakeLists.txt  package.xml
ariac/osrf_gear/config/: comp_conf1.yaml  comp_conf2.yaml  drop_test.yaml  example_custom_config.yaml  qual1a.yaml  qual1b.yaml  qual2a.yaml  qual2b.yaml  qual3a.yaml  qual3b.yaml  sample.yaml  sample_scenario1.yaml  sample_scenario2.yaml  sample_scenario3.yaml  sample_scenario_drop.yaml  sample_user_config.yaml
ariac/osrf_gear/config/finals/: final01.yaml  final02.yaml  final03.yaml  final04.yaml  final05.yaml  final06.yaml  final07.yaml  final08.yaml  final09.yaml  final10.yaml  final11.yaml  final12.yaml  final13.yaml  final14.yaml  final15.yaml
ariac/osrf_gear/include/: ConveyorBeltPlugin.hh  ObjectDisposalPlugin.hh  ROSLogicalCameraPlugin.hh
ariac/osrf_gear/include/osrf_gear/: ARIAC.hh
ariac/osrf_gear/launch/: empty_world.launch  figment_environment.launch  gazebo_config.yaml  gear.launch.template  gear.urdf.xacro.template  gear_playback.launch  sample_environment.launch
ariac/osrf_gear/launch/linear_arm_actuator/: linear_arm_actuator.urdf.xacro
ariac/osrf_gear/launch/ur10/: arm_controller_ur10_custom.yaml  ur10.xml
ariac/osrf_gear/launch/vacuum_gripper/: vacuum_gripper.urdf.xacro
ariac/osrf_gear/models/logical_camera/: model.sdf
ariac/osrf_gear/models/workcell/: model.sdf
ariac/osrf_gear/scenes/: ariac.scene
ariac/osrf_gear/script/: gear.py
ariac/osrf_gear/src/: AriacScorer.cpp  ConveyorBeltPlugin.cc  ObjectDisposalPlugin.cc  PopulationPlugin.cc  ROSAGVPlugin.cc  ROSAriacKitTrayPlugin.cc  ROSAriacTaskManagerPlugin.cc  ROSLogicalCameraPlugin.cc  ROSProximityRayPlugin.cc  SideContactPlugin.cc  VacuumGripperPlugin.cc
ariac/osrf_gear/worlds/: gear.world.template
ariac/test_ariac/: CMakeLists.txt  ariac_example.test  ariac_qual2a.test  ariac_qual2a_scoring_after_waiting.test  ariac_qual2a_scoring_immediate.test  ariac_qual2b.test  ariac_qual2b_scoring_after_waiting.test  ariac_qual2b_scoring_immediate.test  ariac_rosapi.test  ariac_rosapi.yaml  ariac_tf_frames.test  fill_demo_tray.yaml  gripper_unthrottled.test  minimal_sample_unthrottled.yaml  package.xml  qual2a_testing.yaml  qual2b_testing.yaml  ros_api_checker  test_example_node.py  test_gripper.py  test_gripper_unthrottled.py  test_scoring_after_waiting.py  test_scoring_against_expected_score.py  test_scoring_immediate.py  test_tf_frames.py
ariac/test_ariac/test_scoring/: ariac_scoring_correct_parts_incorrect_poses.test  ariac_scoring_correct_parts_not_flipped.test  ariac_scoring_correct_parts_plus_faulty.test  ariac_scoring_correct_parts_plus_unwanted.test  ariac_scoring_faulty_parts.test  ariac_scoring_interrupted.test  ariac_scoring_low_priority_order.test  ariac_scoring_missing_parts.test  ariac_scoring_not_interrupted.test  ariac_scoring_perfect_kit.test  ariac_scoring_perfect_kit_flipped.test  scoring_base_order.yaml  scoring_base_order_flipped.yaml  scoring_base_order_interrupted.yaml  scoring_correct_parts_incorrect_poses.yaml  scoring_correct_parts_not_flipped.yaml  scoring_correct_parts_plus_faulty.yaml  scoring_correct_parts_plus_unwanted.yaml  scoring_faulty_parts.yaml  scoring_missing_parts.yaml  scoring_partial_kit_both_trays.yaml  scoring_perfect_kit.yaml  scoring_perfect_kit_both_trays.yaml  scoring_perfect_kit_flipped.yaml
digital_twin_demo/: CMakeLists.txt  package.xml
digital_twin_demo/config/: localhost.crt  localhost.key  server.key  server.pem
digital_twin_demo/launch/: README  README_plot.txt  setup.launch
digital_twin_demo/scripts/: ariac2017_latency.py  httpsserver.py  websocketserver.py
digital_twin_demo/web/: control.css  demo.html  demo.js
figment/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
figment/config/: figment_gear_conf.yaml
figment/figment_team/: build_team_system.bash  run_team_system.bash  team_config.yaml
figment/src/figment_ariac/: __init__.py  raw_plan.py  scheduler_plan.py
figment/src/figment_ariac/deprecated/: actions.py  control.py
figment/src/figment_ariac/gprt/: arm_actions.py  arm_actions.py.bak  competition.py  constants.py  execution.py  execution.py.bak  global_vars.py  gripper_actions.py  ik_solution.py  order_utils.py  scheduler.py  tf_manager.py  transform.py  trianglesolver.py  utils.py
gazebo_ros_control/: README.md
gazebo_ros_control/src/: default_robot_hw_sim.cpp  (+1 more)
gym-ariac2017/: README.md  ariac_DQN.py  ariac_PPO.py  rollout_custom.py  setup.py
latency_plugin_simple_queue/: CMakeLists.txt  README.md  package.xml  sim_latency_plugins.xml
latency_plugin_simple_queue/include/latency_plugin_simple_queue/: simple_queue_latency_plugin.h
latency_plugin_simple_queue/src/: simple_queue_latency_plugin.cpp
latency_plugin_velocity_control/: CMakeLists.txt  package.xml  sim_latency_plugins.xml
latency_plugin_velocity_control/include/latency_plugin_velocity_control/: latency_plugin_velocity_control.h
latency_plugin_velocity_control/src/: latency_plugin_velocity_control.cpp  latency_plugin_velocity_control.cpp.old
latency_plugin_velocity_publisher/: CMakeLists.txt  package.xml  sim_latency_plugins.xml
latency_plugin_velocity_publisher/include/latency_plugin_velocity_publisher/: latency_plugin_velocity_publisher.h
latency_plugin_velocity_publisher/src/: latency_plugin_velocity_publisher.cpp
robot_hw_sim_latency/: CMakeLists.txt  README.md  package.xml  robot_hw_sim_plugins.xml  sim_latency_plugins.xml
robot_hw_sim_latency/include/robot_hw_sim_latency/: default_sim_latency_plugin.h  robot_hw_sim_latency.h  sim_latency_plugin.h
robot_hw_sim_latency/src/: default_sim_latency_plugin.cpp  robot_hw_sim_latency.cpp
ur5_moveit_vel_control_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_vel_start/: CMakeLists.txt  package.xml
(+43 files in other folders)
