<?xml version="1.0"?>
<package>
  <name>robot_hw_sim_latency</name>
  <version>0.0.1</version>
  <description>Custom gazebo_ros_control simulation plugin that can add latency to communication between ros_control and gazebo</description>

  <maintainer email="pjoejoejoe@gmail.com">József Pető</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://github.com/szgezu/robot_hw_sim_latency</url>

  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>
  <author>József Pető</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <!-- <build_depend>libgazebo7-dev</build_depend>-->
  <build_depend>pluginlib</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <!--
    Need to use libgazebo7-dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  
  <run_depend>libgazebo7-dev</run_depend>-->
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>angles</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
    <robot_hw_sim_latency plugin="${prefix}/sim_latency_plugins.xml"/>
  </export>
  <!-- The export tag contains other, unspecified, tags -->

</package>
