<?xml version="1.0"?>
<package format="2">
  <name>ariac_example</name>
  <version>0.1.0</version>
  <description>An example of an ARIAC competitor's package.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>

</package>