<?xml version="1.0"?>
<package format="2">
  <name>osrf_gear</name>
  <version>0.1.0</version>
  <description>
    The ROS package for the NIST Industrial Automation Competition.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
